--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "@types/react-router": "4.4.4",
+    "@types/react-router-dom": "4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
